[gd_scene load_steps=6 format=3 uid="uid://kr4qi5xryxxt"]

[ext_resource type="Script" path="res://script/main_menu.gd" id="1_8gdgw"]
[ext_resource type="FontFile" uid="uid://bys4fsq5x5ci6" path="res://style/BULKYPIX.TTF" id="1_v8n6y"]
[ext_resource type="AudioStream" uid="uid://c2xm1t42epvhv" path="res://asset/sound/sfx/btn3.mp3" id="3_2eh5k"]
[ext_resource type="AudioStream" uid="uid://b4e158le2f2i6" path="res://asset/sound/sfx/btn8.mp3" id="4_npucc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2alo"]
bg_color = Color(0.458824, 0.643137, 0.611765, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gdgw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j2alo")

[node name="mulai" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -67.5
offset_right = 160.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("1_v8n6y")
theme_override_font_sizes/font_size = 50
text = "MULAI"

[node name="save" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = -67.0
offset_right = 416.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("1_v8n6y")
theme_override_font_sizes/font_size = 50
text = "SAVE"

[node name="Load" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = 28.0
offset_right = 416.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("1_v8n6y")
theme_override_font_sizes/font_size = 50
text = "LOAD"

[node name="change" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = 124.0
offset_right = 416.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("1_v8n6y")
theme_override_font_sizes/font_size = 50
text = "EDIT"

[node name="keluar" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 92.5
offset_right = 160.0
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("1_v8n6y")
theme_override_font_sizes/font_size = 50
text = "KELUAR"

[node name="title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_right = 256.0
offset_bottom = 257.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 11
theme_override_constants/shadow_offset_y = 11
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("1_v8n6y")
theme_override_font_sizes/font_size = 78
text = "D O R O B A K U"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="btn_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2eh5k")
bus = &"SFX"

[node name="btn_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_npucc")
volume_db = -5.0
bus = &"SFX"

[connection signal="mouse_entered" from="Panel/mulai" to="." method="_on_mulai_mouse_entered"]
[connection signal="pressed" from="Panel/mulai" to="." method="_on_mulai_pressed"]
[connection signal="mouse_entered" from="Panel/save" to="." method="_on_save_mouse_entered"]
[connection signal="pressed" from="Panel/save" to="." method="_on_save_pressed"]
[connection signal="mouse_entered" from="Panel/Load" to="." method="_on_load_mouse_entered"]
[connection signal="pressed" from="Panel/Load" to="." method="_on_load_pressed"]
[connection signal="mouse_entered" from="Panel/change" to="." method="_on_change_mouse_entered"]
[connection signal="pressed" from="Panel/change" to="." method="_on_change_pressed"]
[connection signal="mouse_entered" from="Panel/keluar" to="." method="_on_keluar_mouse_entered"]
[connection signal="pressed" from="Panel/keluar" to="." method="_on_keluar_pressed"]
